1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	([ObserverSwarm -buildActions]): Send doTkEvents to actionCache
	instead of controlPanel.

	* Makefile (SWARMHOME): Don't define if already defined.
