@@ -1,7 +1,11 @@
 1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	([ObserverSwarm -buildActions]): Send doTkEvents to actionCache
-	instead of controlPanel.
+	* ModelSwarm.h: Include objectbase.h instead of swarmobject.h.
+	* ObserverSwarm.h: Likewise.
+	* ObserverSwarm.m: Likewise.
+
+	* ObserverSwarm.m ([ObserverSwarm -buildActions]): Send doTkEvents
+	to actionCache instead of controlPanel.
 
 	* Makefile (SWARMHOME): Don't define if already defined.
 
